<resources>
    <string name="app_name">dialog-picker</string>

    <string name="timepicker_year">year</string>
    <string name="timepicker_month">mon</string>
    <string name="timepicker_day">day</string>
    <string name="timepicker_hour">hour</string>
    <string name="timepicker_min">min</string>
    <string name="timepicker_title">Time</string>
    <string name="time_date_picker_title">Date</string>
    <string name="timepicker_finish">OK</string>
    <string name="timepicker_cancel">Cancel</string>
    <string name="timepicker_title_default">set</string>
    <string name="timezonepicker_title">Timezone</string>
    <string name="languagepicker_title">Language</string>
    <string name="fragment_settings_hi_bg_threshold">Hi BG Threshold</string>
    <string name="fragment_settings_lo_bg_threshold">Lo BG Threshold</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="done">Done</string>

    <string-array name="timezone_array">
        <item>Pago Pago(GMT-11:00)</item>
        <item>Honolulu(GMT-10:00)</item>
        <item>Anchorage(GMT-09:00)</item>
        <item>NV Nevada(GMT-08:00)</item>
        <item>Denver(GMT-07:00)</item>
        <item>Chicago(GMT-06:00)</item>
        <item>New York(GMT-05:00)</item>
        <item>Santiago(GMT-04:00)</item>
        <item>Sao Paulo(GMT-03:00)</item>
        <item>Greenland(GMT-02:00)</item>
        <item>Praia(GMT-01:00)</item>
        <item>London(GMT+00:00)</item>
        <item>Paris(GMT+01:00)</item>
        <item>Athens(GMT+02:00)</item>
        <item>Jeddah(GMT+03:00)</item>
        <item>Dubai(GMT+04:00)</item>
        <item>KHI(GMT+05:00)</item>
        <item>Dhaka(GMT+06:00)</item>
        <item>Bangkok(GMT+07:00)</item>
        <item>Beijing(GMT+08:00)</item>
        <item>Tokyo(GMT+09:00)</item>
        <item>Sydney(GMT+10:00)</item>
        <item>Noumea(GMT+11:00)</item>
        <item>Wellington(GMT+12:00)</item>
    </string-array>

    <string-array name="language_array">
        <item>中文</item>
        <item>English</item>
        <item>italiano</item>
        <item>العربية</item>
        <item>русский язык</item>
        <item>español</item>
    </string-array>
</resources>
