<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_light"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/timepicker_title"
        android:textColor="@color/text_white"
        android:textSize="21sp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dip"
            android:paddingTop="5dip">

            <View
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="1" />

            <FrameLayout
                android:layout_width="110dip"
                android:layout_height="wrap_content">

                <com.microtechmd.pda.picker.LoopView
                    android:id="@+id/loop_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"

                    android:text="@string/timepicker_hour"
                    android:textColor="#B3B3B3" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="110dip"
                android:layout_height="wrap_content">

                <com.microtechmd.pda.picker.LoopView
                    android:id="@+id/loop_min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:text="@string/timepicker_min"
                    android:textColor="#B3B3B3" />
            </FrameLayout>

            <View
                android:layout_width="0dip"
                android:layout_height="0dip"
                android:layout_weight="1" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="19dip"
            android:background="#A5A5A5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="19dip"
            android:background="#A5A5A5" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tx_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/timepicker_finish"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/timepicker_cancel"
            android:textColor="@color/green"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>